Bug 127696 - FILESAVE PPT PPTX Outline for text/font is lost
Summary: FILESAVE PPT PPTX Outline for text/font is lost
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.4.0
Keywords: filter:ppt, filter:pptx
: 101569 119674 (view as bug list)
Depends on:
Blocks: PPT PPTX-Characters
  Show dependency treegraph
 
Reported: 2019-09-22 11:05 UTC by Buovjaga
Modified: 2022-06-02 09:54 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Saved as ppt (1.79 MB, application/vnd.ms-powerpoint)
2021-05-31 20:47 UTC, Nick Brown
Details
Test document for transparencies and for different outline fill color (26.87 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-01-03 11:46 UTC, László Németh
Details
Remaining interoperability problems after fixing the missing export (136.13 KB, image/png)
2022-01-03 11:48 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2019-09-22 11:05:48 UTC
1. Open ODP attachment 130922 [details] from bug 77552 (mistakenly attached to a report with a different topic)
2. Save as PPT or PPTX and reload

Text no longer has black outline, but is full-on black.

Tested with Win build from 15.09.2019 and 3.3.0.

One thing to consider just to be sure: does PowerPoint support text outline all the way to PPT binary format?
Comment 1 NISZ LibreOffice Team 2021-01-20 16:14:14 UTC
This is similar to bug #101569 which is about the import of the same thing. 
In PP it's not character property but text outline effect (with line color, dashing etc. configurable), so a limited conversion should be possible.
Comment 2 Nick Brown 2021-05-31 20:42:07 UTC
Original file here
https://bugs.documentfoundation.org/attachment.cgi?id=172510
Comment 3 Nick Brown 2021-05-31 20:47:14 UTC
Created attachment 172514 [details]
Saved as ppt
Comment 4 László Németh 2022-01-03 11:46:13 UTC
Created attachment 177275 [details]
Test document for transparencies and for different outline fill color
Comment 5 László Németh 2022-01-03 11:48:26 UTC
Created attachment 177276 [details]
Remaining interoperability problems after fixing the missing export

Left: the previous test document in MSO.

Right: result of its LO round-trip in MSO.
Comment 6 Commit Notification 2022-01-03 13:41:13 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/678790f292b63c9def1f0427df20028a1f734c15

tdf#127696 PPTX export: fix lost outline character formatting

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Buovjaga 2022-01-04 14:39:28 UTC
Verified, thx

Arch Linux 64-bit
Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: f0d42a5120b35981abed85185530ae4f966c2de6
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 4 January 2022
Comment 8 Tünde Tóth 2022-01-20 12:09:15 UTC
*** Bug 101569 has been marked as a duplicate of this bug. ***
Comment 9 Pablo 2022-02-05 15:38:51 UTC
Any chance the fix could be backported to the 7.3.X branch?
Comment 10 Xisco Faulí 2022-02-07 17:51:43 UTC
(In reply to Pablo from comment #9)
> Any chance the fix could be backported to the 7.3.X branch?

Sure: https://gerrit.libreoffice.org/c/core/+/129636
Comment 11 Xisco Faulí 2022-02-08 08:52:28 UTC
(In reply to Xisco Faulí from comment #10)
> (In reply to Pablo from comment #9)
> > Any chance the fix could be backported to the 7.3.X branch?
> 
> Sure: https://gerrit.libreoffice.org/c/core/+/129636

Unfortunately, this patch depends on other patches, so the backport is not straightforward. You will have to wait until 7.4
Comment 12 Xisco Faulí 2022-06-02 09:54:56 UTC
*** Bug 119674 has been marked as a duplicate of this bug. ***