tdf#127696 OOXML import/export: outline of text in shape

MSO has customizable Text Fill and Text Outline in Format Text
Effects but LO only has simple outline character property.
If this property is true, then the text color is white and
the outline color is the CharColor.

Change-Id: Ic34bce4efd4a544d799b1d89af1107c4918061d8